src/objects/Aggregate_Execution_Efficiency_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>DLAC__c</fullName>
        <label>DLAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA__c</fullName>
        <label>DSA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <label>DSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA__c</fullName>
        <label>DWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INC__c</fullName>
        <label>INC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Percent__c</fullName>
        <label>Test Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Aggregate_Execution_Efficiency__c</fullName>
        <label>Total Aggregate Execution Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Aggregate Execution Efficiency Snapshot</label>
    <nameField>
        <label>Aggregate Execution Efficiency Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregate Execution Efficiency Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>